force-app/main/default/objects/Prestation_de_transport__c/fields/Biologistic_customer_group__c.field-meta.xml
<CustomField>
    <fullName>Biologistic_customer_group__c</fullName>
    <label>Client sur réseau Biologistic</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Biologistic_customer_group</valueSetName>
    </valueSet>
</CustomField>