force-app/main/default/objects/Prestation_de_transport__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Client</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Merci de sélectionner un compte de type Établissement.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Etablissement</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prestations de transports</relationshipLabel>
    <relationshipName>Compteclient</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>