force-app/main/default/objects/Prestation_de_transport__c/fields/Date_de_chargement_init__c.field-meta.xml
<CustomField>
    <fullName>Date_de_chargement_init__c</fullName>
    <label>Date de chargement init</label>
    <type>Date</type>
</CustomField>