force-app/main/default/objects/Prestation_de_transport__c/fields/Date_de_mise_en_place__c.field-meta.xml
<CustomField>
    <fullName>Date_de_mise_en_place__c</fullName>
    <label>Date de mise en place</label>
    <required>true</required>
    <type>Date</type>
</CustomField>