force-app/main/default/objects/Prestation_de_transport__c/fields/Date_de_suppression__c.field-meta.xml
<CustomField>
    <fullName>Date_de_suppression__c</fullName>
    <label>Date de suppression</label>
    <type>Date</type>
</CustomField>