force-app/main/default/objects/Prestation_de_transport__c/fields/Fournisseur__c.field-meta.xml
<CustomField>
    <fullName>Fournisseur__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fournisseur</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Merci de sélectionner un compte fournisseur.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Fournisseur</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Prestations de transports (Compte fournisseur)</relationshipLabel>
    <relationshipName>Comptefournisseur</relationshipName>
    <type>Lookup</type>
</CustomField>