force-app/main/default/objects/Prestation_de_transport__c/fields/Nom_prestation__c.field-meta.xml
<CustomField>
    <fullName>Nom_prestation__c</fullName>
    <label>Nom prestation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>