force-app/main/default/objects/Prestation_de_transport__c/fields/Prestation_de_collecte_sur_appel__c.field-meta.xml
<CustomField>
    <fullName>Prestation_de_collecte_sur_appel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestation de collecte sur appel</label>
    <type>Checkbox</type>
</CustomField>