force-app/main/default/objects/Prestation_de_transport__c/fields/Prestation_de_depot_des_retransmissions__c.field-meta.xml
<CustomField>
    <fullName>Prestation_de_depot_des_retransmissions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestation de dépôt des retransmissions</label>
    <type>Checkbox</type>
</CustomField>