force-app/main/default/objects/Prestation_de_transport__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Supprimée</fullName>
            </value>
            <value>
                <fullName>Nouvelle</fullName>
                <isActive>false</isActive>
                <label>Nouvelle</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>