force-app/main/default/objects/Prestation_de_transport__c/fields/Vue_Detaillee__c.field-meta.xml
<CustomField>
    <fullName>Vue_Detaillee__c</fullName>
    <description>Rapport externe détaillant les passages de la tournée (VPN nécessaire)</description>
    <formula>HYPERLINK(
/* &quot;https://app.powerbi.com/groups/3f682a2a-7f59-4c2e-b7d9-8054af2883df/reports/328abcc1-5d46-481d-b862-d0f631100268/ReportSection?filter=DS_CA/Client eq &#39;&quot; &amp; CASESAFEID(Id) &amp; &quot;&#39;&quot;, 
&quot;http://cspe-w-vsqlp01/ReportServer/Pages/ReportViewer.aspx?%2fCRM+Transport%2fReports%2fVueBureauTournee&amp;rs:Command=Render&amp;Bureau_Tournee=&quot; &amp; Name,*/

&quot;http://cspe-w-vsqlp01/ReportServer/Pages/ReportViewer.aspx?%2fCRM+Transport%2fReports%2fVueSpecifique&amp;rs:Command=Render&amp;id=&quot; &amp; ID_de_la_prestation__c,

&quot;Afficher&quot;
,
&quot;_new&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rapport externe détaillant les passages de la tournée (VPN nécessaire)</inlineHelpText>
    <label>Vue Detaillée</label>
    <type>Text</type>
</CustomField>